[package]
name = "simp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.102.*"
cranelift-codegen = {version = "0.102.*", features = ["all-arch"]}
cranelift-frontend = "0.102.*"
cranelift-module = "0.102.*"
cranelift-native = "0.102.*"
cranelift-object = "0.102.*"
